// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/timeline/demo/alternate.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-color-green g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-custom g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      >
        <span
          aria-label="clock-circle"
          class="gicon gicon-clock-circle"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-color-red g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-custom g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      >
        <span
          aria-label="clock-circle"
          class="gicon gicon-clock-circle"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/alternate.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/basic.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/component-token.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/component-token.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/custom.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-custom g-steps-item-empty-header g-timeline-item-color-red g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      >
        <span
          aria-label="clock-circle"
          class="gicon gicon-clock-circle"
          role="img"
          style="font-size: 20px; background: rgb(255, 255, 255);"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/custom.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/end.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-custom g-steps-item-empty-header g-timeline-item-color-red g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      >
        <span
          aria-label="clock-circle"
          class="gicon gicon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/end.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/horizontal.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Init
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Start
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Pending
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Complete
          </div>
        </div>
      </div>
    </li>
  </ol>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Init
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Start
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Pending
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Complete
          </div>
        </div>
      </div>
    </li>
  </ol>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Init
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Start
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Pending
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Complete
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`renders components/timeline/demo/horizontal.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/horizontal-debug.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
  </ol>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
  </ol>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-end g-timeline-item"
      style="box-shadow: 0 0 1px rgba(255,0,0,0.6);"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              Long Text Long Text Long Text Long Text Long Text 
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Long Text Long Text Long Text Long Text Long Text 
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`renders components/timeline/demo/horizontal-debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/pending.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-flex-start g-flex-gap-medium g-flex-vertical"
>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services site 2015-09-01
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems 2015-09-01
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-process g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing 2015-09-01
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-process g-steps-item-custom g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        >
          <span
            aria-label="loading"
            class="gicon gicon-loading gicon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Recording...
          </div>
        </div>
      </div>
    </li>
  </ol>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Toggle Reverse
    </span>
  </button>
</div>
`;

exports[`renders components/timeline/demo/pending.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/pending-legacy.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-flex-start g-flex-gap-medium g-flex-vertical"
>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-process g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services site 2015-09-01
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-process g-steps-item-custom g-steps-item-active g-steps-item-empty-header g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        >
          <span
            aria-label="loading"
            class="gicon gicon-loading gicon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Recording...
          </div>
        </div>
      </div>
    </li>
  </ol>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-process g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services site 2015-09-01
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-process g-steps-item-custom g-steps-item-active g-steps-item-empty-header g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        >
          🔴
        </div>
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Recording...
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`renders components/timeline/demo/pending-legacy.tsx extend context correctly 2`] = `
[
  "Warning: [antd: Timeline] \`pendingDot\` is deprecated. Please use \`items\` instead. You can create a \`item\` as pending node directly.",
  "Warning: [antd: Timeline] \`pending\` is deprecated. Please use \`items\` instead. You can create a \`item\` as pending node directly.",
]
`;

exports[`renders components/timeline/demo/semantic.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    style="height: 100px;"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            style="border-style: dashed;"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    style="height: 100px;"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            style="border-style: dashed;"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
          style="opacity: 0.45;"
        >
          ...for a long time...
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/semantic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-horizontal css-var-test-id acss-14g82y5"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(24, 144, 255);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services site
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(24, 144, 255);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01 09:12:11
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(24, 144, 255);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
  </ol>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id acss-14g82y5"
    style="--g-cmp-steps-items-offset: 0; padding: 10px 6px; border: 1px solid rgb(162, 148, 249);"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(162, 148, 249);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services site
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(162, 148, 249);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01 09:12:11
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
          style="border-color: rgb(162, 148, 249);"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          />
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`renders components/timeline/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/title.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
    style="margin-bottom: 20px;"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="start"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Start
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="end"
        />
      </span>
      <span
        class="g-radio-label"
      >
        End
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="alternate"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Alternate
      </span>
    </label>
  </div>,
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01 09:12:11
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              2015-09-01 09:12:11
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Network problems being solved
          </div>
        </div>
      </div>
    </li>
  </ol>,
]
`;

exports[`renders components/timeline/demo/title.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/title-span.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <h5
    class="g-typography css-var-test-id"
    style="margin: 0px;"
  >
    titleSpan = 100px
  </h5>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0; --g-timeline-head-span-ptg: 100px;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              05:10
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              09:03
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              11:28
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Network problems being solved
          </div>
        </div>
      </div>
    </li>
  </ol>
  <h5
    class="g-typography css-var-test-id"
    style="margin: 0px;"
  >
    titleSpan = 25%
  </h5>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0; --g-timeline-head-span-ptg: 25%;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              05:10
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              09:03
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-start g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              11:28
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Network problems being solved
          </div>
        </div>
      </div>
    </li>
  </ol>
  <h5
    class="g-typography css-var-test-id"
    style="margin: 0px;"
  >
    titleSpan = 18, mode = end
  </h5>
  <ol
    class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-outlined g-steps-dot g-timeline css-var-test-id g-timeline-layout-alternate css-var-test-id"
    style="--g-cmp-steps-items-offset: 0; --g-timeline-head-span: 18;"
  >
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              05:10
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Create a services
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              09:03
            </div>
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Solve initial network problems
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
            />
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Technical testing
          </div>
        </div>
      </div>
    </li>
    <li
      class="g-steps-item g-steps-item-finish g-steps-item-active g-timeline-item-placement-end g-timeline-item"
    >
      <div
        class="g-steps-item-wrapper g-timeline-item-wrapper"
      >
        <div
          class="g-steps-item-icon g-wave-target g-timeline-item-icon"
        />
        <div
          class="g-steps-item-section g-timeline-item-section"
        >
          <div
            class="g-steps-item-header g-timeline-item-header"
          >
            <div
              class="g-steps-item-title g-timeline-item-title"
            >
              11:28
            </div>
          </div>
          <div
            class="g-steps-item-content g-timeline-item-content"
          >
            Network problems being solved
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`renders components/timeline/demo/title-span.tsx extend context correctly 2`] = `[]`;

exports[`renders components/timeline/demo/variant.tsx extend context correctly 1`] = `
<ol
  class="g-steps g-steps-vertical g-steps-title-horizontal g-steps-filled g-steps-dot g-timeline css-var-test-id css-var-test-id"
  style="--g-cmp-steps-items-offset: 0;"
>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        >
          <div
            class="g-steps-item-rail g-steps-item-rail-finish g-timeline-item-rail"
          />
        </div>
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </div>
    </div>
  </li>
  <li
    class="g-steps-item g-steps-item-finish g-steps-item-active g-steps-item-empty-header g-timeline-item-placement-start g-timeline-item"
  >
    <div
      class="g-steps-item-wrapper g-timeline-item-wrapper"
    >
      <div
        class="g-steps-item-icon g-wave-target g-timeline-item-icon"
      />
      <div
        class="g-steps-item-section g-timeline-item-section"
      >
        <div
          class="g-steps-item-header g-timeline-item-header"
        />
        <div
          class="g-steps-item-content g-timeline-item-content"
        >
          Network problems being solved 2015-09-01
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`renders components/timeline/demo/variant.tsx extend context correctly 2`] = `[]`;
